--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./backend/server.js",
-    "test": "nodemon ./backend/server.js"
+    "test": "nodemon ./backend/server.js",
+    "client": "open client/index.html"
   },
   "keywords": [],
   "author": "",
