--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.10",
+    "mongoose-timestamp": "^0.6.0",
+    "mongoose-update-if-current": "^1.4.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.0"
   },
